added flow-typed, and updated the babelrc to strip flow types

--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,6 @@
     "sourceMaps": true,
     "presets": [ "env" ],
     "plugins": [
-        "transform-flow-comments"
+    	"transform-flow-strip-types"
     ]
 }
