--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "babel-register": "^6.24.0",
