--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
     "parser": "babel-eslint",
+    "plugins" : [ "flowtype" ],
     "extends": "eslint:recommended",
     "env": {
         "browser": true,
@@ -58,6 +59,29 @@
         "no-useless-concat": 2,
         "no-var": 1,
         "object-shorthand": 0,
-        "prefer-arrow-callback": 2
+        "prefer-arrow-callback": 2,
+        "flowtype/boolean-style": [2,"boolean"],
+        "flowtype/define-flow-type": 1,
+        "flowtype/delimiter-dangle": [2,"never"],
+        "flowtype/generic-spacing": [2,"never" ],
+        "flowtype/no-primitive-constructor-types": 2,
+        "flowtype/no-weak-types": 0,
+        "flowtype/object-type-delimiter": [2,"comma"],
+        "flowtype/require-parameter-type": 0,
+        "flowtype/require-return-type": [0,"always",{"annotateUndefined": "never"}],
+        "flowtype/require-valid-file-annotation": 2,
+        "flowtype/semi": [2,"always"],
+        "flowtype/space-after-type-colon": [2,"always"],
+        "flowtype/space-before-generic-bracket": [2,"never"],
+        "flowtype/space-before-type-colon": [ 2, "never"],
+        "flowtype/type-id-match": [ 2,"^([A-Z]+[a-z0-9]+)+(Type|_t)$"],
+        "flowtype/union-intersection-spacing": [2,"always"],
+        "flowtype/use-flow-type": 1,
+        "flowtype/valid-syntax": 1
+    },
+    "settings": {
+        "flowtype": {
+            "onlyFilesWithFlowAnnotation": false
+        }
     }
 }
